--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "redux-actions": "^2.6.4",
     "redux-bootstrap": "^1.3.0",
     "redux-form": "^8.0.4",
+    "redux-logger": "3.0.6",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
     "style-loader": "^0.23.1",
