--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.2.0",
+    "socket.io-client": "2.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
