--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "debug": "^4.1.0",
     "dotenv": "^6.2.0",
     "faker": "^4.1.0",
+    "gon": "1.0.3",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "koa": "^2.6.2",
