--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,3 +16,5 @@ rules:
   import/no-unresolved: 0
   import/extensions: 0
   react/prop-types: 0
+#  react/destructuring-assignment: 0
+  jsx-a11y/anchor-is-valid: 0
