--- a/package.json
+++ b/package.json
@@ -53,8 +53,9 @@
     "koa-webpack": "^5.1.1",
     "lodash": "^4.17.11",
     "react": "^16.6.3",
-    "react-bootstrap": "^1.0.0-beta.3",
+    "react-bootstrap": "^1.0.0-beta.4",
     "react-dom": "^16.6.3",
+    "react-icons-kit": "^1.2.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
