--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "bootstrap": "^4.4.1",
-    "classnames": "^2.2.6",
     "css-loader": "^3.2.1",
     "debug": "^4.1.0",
     "dotenv": "^6.2.0",
@@ -78,6 +77,7 @@
     "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
     "nodemon": "^2.0.1"
