--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "koa-generic-session": "^2.0.1",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
-    "koa-pug": "^3.0.0-2",
+    "koa-pug": "^4.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-webpack": "^5.2.4",
