--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build-app": "npx webpack -p --env production",
     "build": "npm run build-app && npm run build-server",
     "postinstall": "npm run build",
-    "start": "node ./dist/bin/slack.js"
+    "start": "NODE_ENV=production node ./dist/bin/slack.js"
   },
   "repository": {
     "type": "git",
@@ -34,14 +34,12 @@
     "bootstrap": "^4.4.1",
     "css-loader": "^3.2.1",
     "debug": "^4.1.0",
-    "dotenv": "^6.2.0",
     "faker": "^4.1.0",
     "gon": "1.0.3",
     "jquery": "^3.4.1",
     "js-cookie": "^2.2.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
-    "koa-generic-session": "^2.0.1",
     "koa-logger": "^3.2.1",
     "koa-mount": "^4.0.0",
     "koa-pug": "^4.0.2",
