--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "node": "9"
   },
   "scripts": {
-    "test": "jest",
-    "build-server": "babel server --out-dir dist --source-maps inline",
+    "test": "NODE_ENV=production jest",
+    "build-server": "babel server --out-dir dist --source-maps inline --ignore \"server/**/__tests__\"",
     "build-app": "npx webpack -p --env production",
     "build": "npm run build-app && npm run build-server",
     "postinstall": "npm run build",
     "start": "NODE_ENV=production node ./dist/bin/slack.js"
+  },
+  "jest": {
+    "roots": ["server", "src"]
   },
   "repository": {
     "type": "git",
@@ -78,6 +81,8 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "nodemon": "^2.0.1"
+    "jsdom": "^15.2.1",
+    "nodemon": "^2.0.1",
+    "supertest": "^4.0.2"
   }
 }
