--- a/package.json
+++ b/package.json
@@ -1,88 +1,64 @@
 {
-  "name": "my-slack",
+  "name": "my-slack-client",
   "version": "0.2.0",
-  "description": "",
-  "main": "dist/index.js",
-  "engines": {
-    "node": "9"
-  },
+  "private": true,
   "scripts": {
-    "test": "NODE_ENV=production jest",
-    "build-server": "babel server --out-dir dist --source-maps inline --ignore \"server/**/__tests__\"",
-    "build-app": "npx webpack -p --env production",
-    "build": "npm run build-app && npm run build-server",
-    "postinstall": "npm run build",
-    "start": "NODE_ENV=production node ./dist/bin/slack.js"
+    "lint": "eslint './client/**/*.{js,jsx}'",
+    "test": "react-app-rewired test --watchAll=false --passWithNoTests",
+    "build": "react-app-rewired build",
+    "prettier": "prettier -l './client/**/*.{js,jsx}'"
   },
-  "jest": {
-    "roots": ["server", "src"]
+  "engines": {
+    "node": "12.16.1",
+    "yarn": "1.22.4"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:ErnestMazurin/project-lvl4-s355.git"
-  },
-  "author": "Ernest Mazurin",
-  "license": "ISC",
-  "homepage": "https://my-slack-project.herokuapp.com/",
   "dependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/node": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-decorators": "^7.7.4",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
-    "axios": "^0.19.0",
-    "babel-loader": "^8.0.6",
-    "bootstrap": "^4.4.1",
-    "css-loader": "^3.2.1",
-    "debug": "^4.1.0",
+    "@stomp/stompjs": "^5.4.4",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "faker": "^4.1.0",
-    "gon": "1.0.3",
-    "jquery": "^3.5.0",
-    "js-cookie": "^2.2.0",
-    "koa": "^2.11.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-logger": "^3.2.1",
-    "koa-mount": "^4.0.0",
-    "koa-pug": "^4.0.2",
-    "koa-router": "^7.4.0",
-    "koa-static": "^5.0.0",
-    "koa-webpack": "^5.2.4",
+    "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.19",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.1.1",
+    "react-dom": "^16.13.1",
     "react-icons-kit": "^1.3.1",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.4",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-bootstrap": "^1.3.0",
-    "redux-form": "^8.2.6",
+    "redux-form": "^8.3.6",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "regenerator-runtime": "^0.13.3",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "2.2.0",
-    "style-loader": "^1.0.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "sockjs-client": "^1.4.0"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "jest": "^24.9.0",
-    "jest-cli": "^24.9.0",
-    "jsdom": "^15.2.1",
-    "nodemon": "^2.0.1",
-    "supertest": "^4.0.2"
-  }
+    "babel-eslint": "10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "prettier": "^2.0.5",
+    "react-app-rewired": "^2.1.6",
+    "react-scripts": "^3.4.1"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "homepage": "./"
 }
