--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "lint": "eslint './client/**/*.{js,jsx}'",
     "test": "react-app-rewired test --watchAll=false --passWithNoTests",
     "build": "react-app-rewired build",
+    "start-dev": "react-app-rewired start",
     "prettier": "prettier -l './client/**/*.{js,jsx}'"
   },
   "engines": {
@@ -16,7 +17,6 @@
     "@stomp/stompjs": "^5.4.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
-    "faker": "^4.1.0",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.19",
@@ -29,7 +29,6 @@
     "redux-actions": "^2.6.5",
     "redux-bootstrap": "^1.3.0",
     "redux-form": "^8.3.6",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sockjs-client": "^1.4.0"
   },
@@ -43,7 +42,8 @@
     "eslint-plugin-react-hooks": "^4.0.8",
     "prettier": "^2.0.5",
     "react-app-rewired": "^2.1.6",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "webpack-bundle-analyzer": "^3.8.0"
   },
   "eslintConfig": {
     "extends": "react-app"
